fixed annoying upload button icon alignment

--- a/src/app/upload/upload.component.scss
+++ b/src/app/upload/upload.component.scss
@@ -10,6 +10,10 @@ body {
 
 /* Upload Post Section CSS Start */
 
+mat-icon {
+  vertical-align: middle;
+}
+
 .upload-post-wrapper {
   padding: 200px 0;
 }
